# arm01_ws

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: robot_moveit_config.pc  tjurm_arm_final.pc
devel/lib/robot_moveit_config/: joint_state_publisher  moveit_planning_scene_demo  serial_receiver  serial_sender  share_memory  shm  test_first  test_planning  trajectory_plan  trajectory_plan_z_down  trajectory_plan_z_up
devel/share/robot_moveit_config/cmake/: robot_moveit_configConfig.cmake
devel/share/tjurm_arm_final/cmake/: tjurm_arm_finalConfig.cmake
src/robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_moveit_config/config/: kinematics.yaml  ros_controllers.yaml  tjurm_arm_final.srdf
src/robot_moveit_config/include/: structure.h
src/robot_moveit_config/launch/: demo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
src/robot_moveit_config/launch_user/: start.launch
src/robot_moveit_config/src/: joint_state_publisher.cpp  moveit_planning_scene_demo.cpp  serial_receiver.cpp  serial_sender.cpp  share_memory.cpp  shm.cpp  test_planning.cpp  trajectory_plan_z_down.cpp  trajectory_plan_z_up.cpp
src/tjurm_arm_final/: CMakeLists.txt  package.xml
src/tjurm_arm_final/launch/: display.launch  gazebo.launch
src/tjurm_arm_final/meshes/: base_link.STL  link1.STL  link3.STL  link5.STL
src/tjurm_arm_final/urdf/: tjurm_arm_final.csv  tjurm_arm_final.urdf
